[svn r3162] (BNK)Von findbugs gefundene Bugs durch schwieriger zu findende ersetzt.