@@ -40,30 +40,32 @@ import java.util.Iterator;
 import com.sun.star.awt.XTopWindow;
 import com.sun.star.awt.XTopWindowListener;
 import com.sun.star.lang.EventObject;
+import com.sun.star.uno.UnoRuntime;
+import com.sun.star.uno.XInterface;
 
 import de.muenchen.allg.afid.UNO;
 
 /**
- * Diese Klasse steuert die logische Ankopplung von eigentlich unabhängigen
- * Fenstern an ein XTopWindow-Hauptfenster von OOo. Die angekoppelten Fenster
- * werden nur sichtbar, wenn das Hauptfenster den Fokus erhält. Verliert das
- * Hauptfenster oder ein angeoppeltes Fenster den Fokus an ein Fenster, das
- * nicht vom CoupledWindowController überwacht wird, so werden alle
- * angekoppelten Fenster unsichtbar gestellt.
+ * Diese Klasse steuert die logische Ankopplung von eigentlich unabhängigen Fenstern
+ * an ein XTopWindow-Hauptfenster von OOo. Die angekoppelten Fenster werden nur
+ * sichtbar, wenn das Hauptfenster den Fokus erhält. Verliert das Hauptfenster oder
+ * ein angeoppeltes Fenster den Fokus an ein Fenster, das nicht vom
+ * CoupledWindowController überwacht wird, so werden alle angekoppelten Fenster
+ * unsichtbar gestellt.
  * 
- * ACHTUNG: Die Windowmanager unter Windows und auf dem Basisclient verhalten
- * sich unterschiedlich und es werden unterschiedliche Ereignisse für gleiche
- * Aktionen generiert: z.B. erhält die Seriendruckleiste (das erste Beispiel
- * eines angekoppelten Fensters) auf dem Basisclient immer den Fokus, wenn
- * setCoupledWindowsVisible(true) aufgerufen wurde. Unter Windows wird das
- * Fenster zwar kurz aktiv, bekommt aber nicht den Fokus. Auch Situationen wie
- * das Schließen eines AWT-Fensters, das ein Parent-Window gesetzt hat, führen
- * zu unterschiedlichen Events auf dem Basisclient und unter Windows. Es ist
- * auch nicht gewährleistet, dass die Ereignisse Deaktivierung/Aktivierung beim
- * Fensterwechsel immer in der selben Reihenfolge eintreffen. Diese Klasse
- * enthält einen Stand, der nach langer Arbeit und Probiererei nun endlich in
- * den meisten Fällen funktioniert. Wenn hier etwas geändert werden muss, dann
- * unbedingt unter Windows und auf dem Basisclient ausführlich testen!!!
+ * ACHTUNG: Die Windowmanager unter Windows und auf dem Basisclient verhalten sich
+ * unterschiedlich und es werden unterschiedliche Ereignisse für gleiche Aktionen
+ * generiert: z.B. erhält die Seriendruckleiste (das erste Beispiel eines
+ * angekoppelten Fensters) auf dem Basisclient immer den Fokus, wenn
+ * setCoupledWindowsVisible(true) aufgerufen wurde. Unter Windows wird das Fenster
+ * zwar kurz aktiv, bekommt aber nicht den Fokus. Auch Situationen wie das Schließen
+ * eines AWT-Fensters, das ein Parent-Window gesetzt hat, führen zu unterschiedlichen
+ * Events auf dem Basisclient und unter Windows. Es ist auch nicht gewährleistet,
+ * dass die Ereignisse Deaktivierung/Aktivierung beim Fensterwechsel immer in der
+ * selben Reihenfolge eintreffen. Diese Klasse enthält einen Stand, der nach langer
+ * Arbeit und Probiererei nun endlich in den meisten Fällen funktioniert. Wenn hier
+ * etwas geändert werden muss, dann unbedingt unter Windows und auf dem Basisclient
+ * ausführlich testen!!!
  * 
  * @author Christoph Lutz (D-III-ITD-5.1)
  */
@@ -71,20 +73,19 @@ public class CoupledWindowController
 {
 
   /**
-   * Enthält alle mit addCoupledWindow registrierten angekoppelten Fenster.
-   * Dieses Feld ist als ArrayList angelegt, damit gewährleistet ist, dass die
-   * Fenster immer in der Reihenfolge der Registrierung sichtbar/unsichtbar
-   * geschalten werden (also nicht in willkürlicher Reihenfolge, die ein HashSet
-   * mit sich bringen würde).
+   * Enthält alle mit addCoupledWindow registrierten angekoppelten Fenster. Dieses
+   * Feld ist als ArrayList angelegt, damit gewährleistet ist, dass die Fenster immer
+   * in der Reihenfolge der Registrierung sichtbar/unsichtbar geschalten werden (also
+   * nicht in willkürlicher Reihenfolge, die ein HashSet mit sich bringen würde).
    */
   private ArrayList<CoupledWindow> coupledWindows = new ArrayList<CoupledWindow>();
 
   /**
    * Enthält eine Liste mit WeakReference-Objekten, die auf Unterfenster von
-   * coupledWindows zeigen, die die verschiedenen CoupledWindowListener
-   * aufsammeln.
+   * coupledWindows zeigen, die die verschiedenen CoupledWindowListener aufsammeln.
    */
-  private ArrayList<WeakReference<Window>> collectedChildWindows = new ArrayList<WeakReference<Window>>();
+  private ArrayList<WeakReference<Window>> collectedChildWindows =
+    new ArrayList<WeakReference<Window>>();
 
   /**
    * Enthält den WindowStateWatcher, mit dem der Fensterstatus überwacht und die
@@ -93,55 +94,53 @@ public class CoupledWindowController
   private WindowStateWatcher windowState = new WindowStateWatcher();
 
   /**
-   * Der WindowStateWatcher überwacht den Fensterstatus der angekoppelten
-   * Fenster und stößt ggf. die notwendigen Aktionen an. Der WindowStateWatcher
-   * enthält die Listener, mit denen das Hauptfenster und die angeoppelten
-   * Fenster überwacht werden und weiss immer bescheid, welches (registrierte)
-   * Fenster aktuell den Fokus besitzt. Er veranlasst entsprechende Aktionen,
-   * wenn das Hauptfenster den Fokus bekommt oder die Anwendung den Fokus an ein
-   * fremdes Fenster abgibt.
+   * Der WindowStateWatcher überwacht den Fensterstatus der angekoppelten Fenster und
+   * stößt ggf. die notwendigen Aktionen an. Der WindowStateWatcher enthält die
+   * Listener, mit denen das Hauptfenster und die angeoppelten Fenster überwacht
+   * werden und weiss immer bescheid, welches (registrierte) Fenster aktuell den
+   * Fokus besitzt. Er veranlasst entsprechende Aktionen, wenn das Hauptfenster den
+   * Fokus bekommt oder die Anwendung den Fokus an ein fremdes Fenster abgibt.
    */
   private class WindowStateWatcher
   {
     /**
-     * Wenn ein Fenster deaktiviert und nach DEACTIVATION_TIMEOUT Millisekunden
-     * kein neues Fenster aktiviert wurde, dann werden alle angekoppelten
-     * Fenster auf unsichtbar gestellt.
+     * Wenn ein Fenster deaktiviert und nach DEACTIVATION_TIMEOUT Millisekunden kein
+     * neues Fenster aktiviert wurde, dann werden alle angekoppelten Fenster auf
+     * unsichtbar gestellt.
      */
     private static final int DEACTIVATION_TIMEOUT = 200;
 
     /**
-     * Enthält das aktuell aktive Fenster oder null, wenn kein Fenster aktiv
-     * ist.
+     * Enthält das aktuell aktive Fenster oder null, wenn kein Fenster aktiv ist.
      */
-    private Object[] activeWindow = new Object[] { null };
+    private XTopWindowOrAWTWindow[] activeWindow =
+      new XTopWindowOrAWTWindow[] { null };
 
     /**
-     * Enthält eine eindeutige Nummer, die dem zuletzt gestarteten Warte-Thread
-     * für ein TimeoutEvent übergeben wurde.
+     * Enthält eine eindeutige Nummer, die dem zuletzt gestarteten Warte-Thread für
+     * ein TimeoutEvent übergeben wurde.
      */
     private int lastValidTimeoutEvent = 0;
 
     /**
-     * Nachdem alle angekoppelten Fenster unsichtbar gestellt wurden, wird
-     * dieses Flag auf true gesetzt und gibt an, dass die Reaktivierung
-     * ausschließlich durch des Hauptfenster veranlasst werden darf.
+     * Nachdem alle angekoppelten Fenster unsichtbar gestellt wurden, wird dieses
+     * Flag auf true gesetzt und gibt an, dass die Reaktivierung ausschließlich durch
+     * des Hauptfenster veranlasst werden darf.
      */
     private boolean acceptMainWindowOnly = true;
 
     /**
      * Behandelt ein timeoutEvent, das beim Fokusverlust an ein fremdes Fenster
      * erzeugt wird. Ein Timeout-Event hat eine eindeutige Nummer, die mit
-     * lastValideTimeoutEvent übereinstimmen muss, damit das Event gültig ist
-     * (dient dazu, damit ein bereits laufender Warte-Thread nicht abgewürgt
-     * werden muss, wenn bereits der nächste - dann gültige - Warte-Thread
-     * angestossen wurde). Ist kein aktives Fenster vorhanden, so werden alle
-     * angekoppelten Fenster unsichtbar gemacht.
+     * lastValideTimeoutEvent übereinstimmen muss, damit das Event gültig ist (dient
+     * dazu, damit ein bereits laufender Warte-Thread nicht abgewürgt werden muss,
+     * wenn bereits der nächste - dann gültige - Warte-Thread angestossen wurde). Ist
+     * kein aktives Fenster vorhanden, so werden alle angekoppelten Fenster
+     * unsichtbar gemacht.
      * 
      * @param nr
-     *          eindeutige Nummer des timeout-Events, die mit
-     *          lastValidTimeoutEvent übereinstimmen muss, damit das Event
-     *          ausgeführt wird.
+     *          eindeutige Nummer des timeout-Events, die mit lastValidTimeoutEvent
+     *          übereinstimmen muss, damit das Event ausgeführt wird.
      * 
      * @author Christoph Lutz (D-III-ITD-5.1)
      */
@@ -164,7 +163,7 @@ public class CoupledWindowController
         else
         {
           Logger.debug2(L.m("Timeout aber keine Aktion da Fenster #%1 aktiv.",
-            new Integer(activeWindow[0].hashCode())));
+            Integer.valueOf(activeWindow[0].hashCode())));
         }
       }
     }
@@ -177,27 +176,27 @@ public class CoupledWindowController
      *          der Schlüssel des derzeit aktiven Fensters, mit dem das Fenster
      *          später deaktiviert werden kann.
      * @param isMainWindow
-     *          Das Hauptfenster hat eine Sonderrolle, da nur die Aktivierung
-     *          des Hauptfenster das acceptMainWindow-Flag zurücksetzen darf.
-     *          Über diesen Parameter kann angegeben werden, ob das Fenster als
-     *          Hauptfenster interpretiert gewertet werden soll.
+     *          Das Hauptfenster hat eine Sonderrolle, da nur die Aktivierung des
+     *          Hauptfenster das acceptMainWindow-Flag zurücksetzen darf. Über diesen
+     *          Parameter kann angegeben werden, ob das Fenster als Hauptfenster
+     *          interpretiert gewertet werden soll.
      * 
      * @author Christoph Lutz (D-III-ITD-5.1)
      */
-    public void activationEvent(Object key, boolean isMainWindow)
+    public void activationEvent(XTopWindowOrAWTWindow key, boolean isMainWindow)
     {
       if (key == null) return;
 
       if (acceptMainWindowOnly && !isMainWindow)
       {
         Logger.debug2(L.m("Aktivierung ignoriert da Fenster #%1 kein Hauptfenster.",
-          new Integer(key.hashCode())));
+          Integer.valueOf(key.hashCode())));
         return;
       }
 
       synchronized (activeWindow)
       {
-        Object lastActiveWindow = activeWindow[0];
+        XTopWindowOrAWTWindow lastActiveWindow = activeWindow[0];
         activeWindow[0] = key;
         if (lastActiveWindow == null)
         {
@@ -205,17 +204,17 @@ public class CoupledWindowController
           acceptMainWindowOnly = false;
         }
 
-        Logger.debug2(L.m("Aktivierung von Fenster #%1", new Integer(
-          activeWindow[0].hashCode())));
+        Logger.debug2(L.m("Aktivierung von Fenster #%1",
+          Integer.valueOf(activeWindow[0].hashCode())));
       }
     }
 
     /**
      * Registriert die Deaktivierung eines Fensters, das durch den Schlüssel key
-     * eindeutig beschrieben ist. Key muss dabei identisch mit dem Schlüssel
-     * sein, mit dem das Fenster aktiviert wurde, sonst wird auch nichts
-     * unternommen. Eine bestimmte Zeit nach dem Deaktivieren des Fensters wird
-     * ein Timeout-Event abgesetzt.
+     * eindeutig beschrieben ist. Key muss dabei identisch mit dem Schlüssel sein,
+     * mit dem das Fenster aktiviert wurde, sonst wird auch nichts unternommen. Eine
+     * bestimmte Zeit nach dem Deaktivieren des Fensters wird ein Timeout-Event
+     * abgesetzt.
      * 
      * @param key
      * 
@@ -228,23 +227,23 @@ public class CoupledWindowController
       {
         if (key.equals(activeWindow[0]))
         {
-          Logger.debug2(L.m("Deaktivierung von Fenster #%1", new Integer(
-            key.hashCode())));
+          Logger.debug2(L.m("Deaktivierung von Fenster #%1",
+            Integer.valueOf(key.hashCode())));
           activeWindow[0] = null;
           startWaitForTimeout();
         }
         else
         {
           Logger.debug2(L.m("Deaktierung ignoriert, da Fenster #%1 nicht aktiv.",
-            new Integer(key.hashCode())));
+            Integer.valueOf(key.hashCode())));
         }
       }
     }
 
     /**
      * Erzeugt nach einer bestimmten Zeit ein Timeout-Event über das die
-     * angekoppelten Fenster unsichtbar geschalten werden, wenn bei Ausführung
-     * des Timeout-Events kein Fenster aktiv ist.
+     * angekoppelten Fenster unsichtbar geschalten werden, wenn bei Ausführung des
+     * Timeout-Events kein Fenster aktiv ist.
      * 
      * @author Christoph Lutz (D-III-ITD-5.1)
      */
@@ -260,8 +259,7 @@ public class CoupledWindowController
             Thread.sleep(DEACTIVATION_TIMEOUT);
           }
           catch (InterruptedException e)
-          {
-          }
+          {}
           timeoutEvent(nr);
         }
       };
@@ -281,12 +279,13 @@ public class CoupledWindowController
 
       public void windowActivated(EventObject arg0)
       {
-        windowState.activationEvent(UNO.XInterface(arg0.Source), true);
+        windowState.activationEvent(new XTopWindowOrAWTWindow(
+          UNO.XTopWindow(arg0.Source)), true);
       }
 
       public void windowNormalized(EventObject arg0)
       {
-        // nicht relevant
+      // nicht relevant
       }
 
       public void windowMinimized(EventObject arg0)
@@ -301,22 +300,22 @@ public class CoupledWindowController
 
       public void windowClosed(EventObject arg0)
       {
-        // nicht relevant
+      // nicht relevant
       }
 
       public void windowClosing(EventObject arg0)
       {
-        // nicht relevant
+      // nicht relevant
       }
 
       public void windowOpened(EventObject arg0)
       {
-        // nicht relevant
+      // nicht relevant
       }
 
       public void disposing(EventObject arg0)
       {
-        // nicht relevant
+      // nicht relevant
       }
     };
 
@@ -327,17 +326,18 @@ public class CoupledWindowController
     {
       public void windowActivated(WindowEvent e)
       {
-        windowState.activationEvent(e.getSource(), false);
+        windowState.activationEvent(
+          new XTopWindowOrAWTWindow((Window) e.getSource()), false);
       }
 
       public void windowClosed(WindowEvent e)
       {
-        // nicht relevant
+      // nicht relevant
       }
 
       public void windowClosing(WindowEvent e)
       {
-        // nicht relevant
+      // nicht relevant
       }
 
       public void windowDeactivated(WindowEvent e)
@@ -354,7 +354,7 @@ public class CoupledWindowController
           for (Iterator<CoupledWindow> iter = coupledWindows.iterator(); iter.hasNext();)
           {
             CoupledWindow win = iter.next();
-            if (win.equals(w))
+            if (win.isSameWindow(w))
             {
               collectChildWindow(e.getOppositeWindow());
               return;
@@ -369,27 +369,27 @@ public class CoupledWindowController
 
       public void windowDeiconified(WindowEvent e)
       {
-        // nicht relevant
+      // nicht relevant
       }
 
       public void windowIconified(WindowEvent e)
       {
-        // nicht relevant
+      // nicht relevant
       }
 
       public void windowOpened(WindowEvent e)
       {
-        // nicht relevant
+      // nicht relevant
       }
     };
 
     /**
      * Fügt eine WeakReference auf das Unterfenster childWindow zu
-     * collectedChildWindows hinzu und registriert einen coupledWindowListener
-     * auf childWindow, aber nur dann, wenn das Fenster nicht bereits
-     * registriert ist. Bei der Prüfung, ob das Fenster bereits registriert ist,
-     * werden alle WeakReference-Objekte aus der Liste collectedChildWindows
-     * gelöscht, deren referenzierte Objekte nicht mehr existent sind.
+     * collectedChildWindows hinzu und registriert einen coupledWindowListener auf
+     * childWindow, aber nur dann, wenn das Fenster nicht bereits registriert ist.
+     * Bei der Prüfung, ob das Fenster bereits registriert ist, werden alle
+     * WeakReference-Objekte aus der Liste collectedChildWindows gelöscht, deren
+     * referenzierte Objekte nicht mehr existent sind.
      * 
      * @param childWindow
      *          das aufzusammelnde Kindfenster
@@ -401,7 +401,7 @@ public class CoupledWindowController
       for (Iterator<WeakReference<Window>> iter = collectedChildWindows.iterator(); iter.hasNext();)
       {
         WeakReference<Window> ref = iter.next();
-        Object win = ref.get();
+        Window win = ref.get();
         if (win != null)
         {
           if (win.equals(childWindow)) return;
@@ -412,8 +412,8 @@ public class CoupledWindowController
         }
       }
 
-      Logger.debug(L.m("Registriere Kinfenster #%1", new Integer(
-        childWindow.hashCode())));
+      Logger.debug(L.m("Registriere Kindfenster #%1",
+        Integer.valueOf(childWindow.hashCode())));
       collectedChildWindows.add(new WeakReference<Window>(childWindow));
       childWindow.addWindowListener(coupledWindowListener);
     }
@@ -421,8 +421,8 @@ public class CoupledWindowController
 
   /**
    * Koppelt das AWT-Window window an das Hauptfenster an. Die Methode muss
-   * aufgerufen werden, solange das Fenster window unsichtbar und nicht aktiv
-   * ist (also z.B. vor dem Aufruf von window.setVisible(true)).
+   * aufgerufen werden, solange das Fenster window unsichtbar und nicht aktiv ist
+   * (also z.B. vor dem Aufruf von window.setVisible(true)).
    * 
    * @param window
    *          das Fenster, das an das Hauptfenster angekoppelt werden soll.
@@ -442,8 +442,8 @@ public class CoupledWindowController
    * Löst die Bindung eines angekoppelten Fensters window an das Hauptfenster.
    * 
    * @param window
-   *          das Fenster, dessen Bindung zum Hauptfenster gelöst werden soll.
-   *          Ist das Fenster nicht angekoppelt, dann passiert nichts.
+   *          das Fenster, dessen Bindung zum Hauptfenster gelöst werden soll. Ist
+   *          das Fenster nicht angekoppelt, dann passiert nichts.
    * 
    * @author Christoph Lutz (D-III-ITD-5.1)
    */
@@ -479,8 +479,8 @@ public class CoupledWindowController
   }
 
   /**
-   * Registriert ein Hauptfenster in diesem CoupledWindowController und sollte
-   * immer vor der Benutzung des Controllers aufgerufen werden.
+   * Registriert ein Hauptfenster in diesem CoupledWindowController und sollte immer
+   * vor der Benutzung des Controllers aufgerufen werden.
    * 
    * @param w
    *          Das XTopWindow welches das entsprechende Hauptfenster ist.
@@ -491,12 +491,12 @@ public class CoupledWindowController
   {
     if (w == null) return;
     w.addTopWindowListener(windowState.topWindowListener);
-    windowState.activationEvent(UNO.XInterface(w), true);
+    windowState.activationEvent(new XTopWindowOrAWTWindow(w), true);
   }
 
   /**
-   * Deregistriert ein Hauptfenster und sollte aufgerufen werden, wenn der
-   * Controller nicht mehr benötigt wird und aufgeräumt werden kann.
+   * Deregistriert ein Hauptfenster und sollte aufgerufen werden, wenn der Controller
+   * nicht mehr benötigt wird und aufgeräumt werden kann.
    * 
    * @param w
    *          Das XTopWindow welches früher als Hauptfenster diente.
@@ -511,8 +511,8 @@ public class CoupledWindowController
   }
 
   /**
-   * Gibt an, ob in diesem CoupledWindowController angekoppelte Fenster
-   * registriert wurden.
+   * Gibt an, ob in diesem CoupledWindowController angekoppelte Fenster registriert
+   * wurden.
    * 
    * @author Christoph Lutz (D-III-ITD-5.1)
    */
@@ -529,11 +529,10 @@ public class CoupledWindowController
   private interface CoupledWindow
   {
     /**
-     * Setzt das angekoppelte Fenster auf sichtbar oder unsichtbar und kann
-     * dabei auch den Fokus erhalten (Das ist eine unschöner Nebeneffekt der
-     * AWT-Methode setVisible(...), der hier berücksichtigt ist). Ändert visible
-     * nicht den Sichtbarkeitsstatus des Fenster, so hat diese Methode keine
-     * Auswirkung.
+     * Setzt das angekoppelte Fenster auf sichtbar oder unsichtbar und kann dabei
+     * auch den Fokus erhalten (Das ist eine unschöner Nebeneffekt der AWT-Methode
+     * setVisible(...), der hier berücksichtigt ist). Ändert visible nicht den
+     * Sichtbarkeitsstatus des Fenster, so hat diese Methode keine Auswirkung.
      * 
      * @param visible
      * 
@@ -542,10 +541,10 @@ public class CoupledWindowController
     public void setVisible(boolean visible);
 
     /**
-     * Registriert auf dem angekoppelten Fenster einen WindowListener über den
-     * das Hauptfenster mitkriegen kann, dass ein angekoppeltes Fenster den
-     * Fokus an ein fremdes, nicht angekoppeles, Fenster verloren hat und somit
-     * auch alle angekoppelten Fenster unsichtbar gestellt werden sollen.
+     * Registriert auf dem angekoppelten Fenster einen WindowListener über den das
+     * Hauptfenster mitkriegen kann, dass ein angekoppeltes Fenster den Fokus an ein
+     * fremdes, nicht angekoppeles, Fenster verloren hat und somit auch alle
+     * angekoppelten Fenster unsichtbar gestellt werden sollen.
      * 
      * @author Christoph Lutz (D-III-ITD-5.1)
      * @param listener
@@ -560,13 +559,20 @@ public class CoupledWindowController
      * @param listener
      */
     public void removeWindowListener(WindowListener listener);
+
+    /**
+     * Liefert true gdw this gecoupled ist mit w.
+     * 
+     * @author Matthias Benkmann (D-III-ITD-D101)
+     */
+    public boolean isSameWindow(Window w);
   }
 
   /**
    * Diese Klasse repräsentiert ein CoupledWindow-Objekt, dem ein
-   * java.awt.Window-Objekt zugrundeliegt und implementiert die Methoden
-   * hashCode() und equals() damit das Objekt sinnvoll verglichen und in einer
-   * HashMap verwaltet werden kann.
+   * java.awt.Window-Objekt zugrundeliegt und implementiert die Methoden hashCode()
+   * und equals() damit das Objekt sinnvoll verglichen und in einer HashMap verwaltet
+   * werden kann.
    * 
    * @author Christoph Lutz (D-III-ITD-5.1)
    */
@@ -592,14 +598,12 @@ public class CoupledWindowController
               if (window.isVisible() != visible) window.setVisible(visible);
             }
             catch (Exception x)
-            {
-            }
+            {}
           }
         });
       }
       catch (Exception x)
-      {
-      }
+      {}
     }
 
     public void addWindowListener(final WindowListener l)
@@ -615,14 +619,12 @@ public class CoupledWindowController
               window.addWindowListener(l);
             }
             catch (Exception x)
-            {
-            }
+            {}
           }
         });
       }
       catch (Exception x)
-      {
-      }
+      {}
     }
 
     public void removeWindowListener(final WindowListener l)
@@ -638,14 +640,12 @@ public class CoupledWindowController
               window.removeWindowListener(l);
             }
             catch (Exception x)
-            {
-            }
+            {}
           }
         });
       }
       catch (Exception x)
-      {
-      }
+      {}
     }
 
     public int hashCode()
@@ -653,20 +653,67 @@ public class CoupledWindowController
       return window.hashCode();
     }
 
+    public boolean isSameWindow(Window w)
+    {
+      return this.window.equals(w);
+    }
+
     public boolean equals(Object o)
     {
-      if (o instanceof CoupledAWTWindow)
+      try
       {
         CoupledAWTWindow w = (CoupledAWTWindow) o;
-        return window.equals(w.window);
+        return (w != null && window.equals(w.window));
       }
-      else if (o instanceof Window)
+      catch (ClassCastException x)
+      {}
+
+      return false;
+    }
+  }
+
+  private static class XTopWindowOrAWTWindow
+  {
+    private Object window;
+
+    private int hash;
+
+    public XTopWindowOrAWTWindow(Window win)
+    {
+      if (win == null)
       {
-        Window w = (Window) o;
-        return window.equals(w);
+        Logger.error(L.m("Großes Problem"));
+        throw new NullPointerException();
       }
+      this.window = win;
+      this.hash = win.hashCode();
+    }
+
+    public XTopWindowOrAWTWindow(XTopWindow win)
+    {
+      this.window = UNO.XInterface(win);
+      if (window == null)
+      {
+        Logger.error(L.m("Großes Problem"));
+        throw new NullPointerException();
+      }
+      this.hash = UnoRuntime.generateOid(win).hashCode();
+    }
+
+    public int hashCode()
+    {
+      return hash;
+    }
+
+    public boolean equals(Object o)
+    {
+      XInterface x = UNO.XInterface(o);
+      if (x != null)
+        return UnoRuntime.areSame(x, window);
       else
-        return false;
+      {
+        return window.equals(o);
+      }
     }
   }
 }
